--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "version": "0.0.1",
   "dependencies": {
+    "express": "^4.13.3",
     "markdown": "^0.5.0",
     "materialize-css": "^0.97.1"
   }
