--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "makedir": "0.0.11",
     "markdown": "^0.5.0",
     "materialize-css": "^0.97.1",
+    "mongodb": "^2.0.46",
     "morgan": "^1.6.1",
     "nodemailer": "^1.8.0",
     "require-dir": "^0.3.0",
-    "rmdir": "^1.1.0",
     "serve-favicon": "^2.3.0",
     "webdriverio": "^3.2.5",
     "xml2js": "^0.4.13"
