--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "private": true,
   "scripts": {
     "build": "gulp build",
+    "archive": "gulp archive",
     "test": "mocha test/specs/**/*.js --timeout 20000",
     "start": "node ./dist/bin/www",
     "debug": "DEBUG=app npm start"
@@ -44,7 +45,7 @@
     "body-parser": "^1.14.1",
     "bower": "^1.6.3",
     "browserify": "^11.2.0",
-    "chai": "^3.4.0",
+    "chai": "1.6.1",
     "cookie-parser": "^1.4.0",
     "cpr": "^0.4.3",
     "debug": "^2.2.0",
@@ -59,7 +60,9 @@
     "require-dir": "^0.3.0",
     "serve-favicon": "^2.3.0",
     "webdriverio": "^3.2.5",
-    "xml2js": "^0.4.13"
+    "xml2js": "^0.4.13",
+    "recursive-readdir": "^1.2.1",
+    "chai-fs": "^0.1.0"
   },
   "description": "It's 2015, you should update your resume and generate a web version using a CLI, using Templates on MarkDown.",
   "main": "index.js",
