--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "archive": "gulp archive",
     "test": "mocha test/specs/**/*.js --timeout 20000",
     "start": "node ./dist/bin/www",
-    "debug": "DEBUG=app npm start"
+    "source": "node ./src/bin/www",
+    "debug": "DEBUG=app npm run source"
   },
   "version": "0.0.1",
   "dependencies": {
@@ -46,6 +47,7 @@
     "bower": "^1.6.3",
     "browserify": "^11.2.0",
     "chai": "1.6.1",
+    "chai-fs": "^0.1.0",
     "cookie-parser": "^1.4.0",
     "cpr": "^0.4.3",
     "debug": "^2.2.0",
@@ -57,12 +59,15 @@
     "materialize-css": "^0.97.1",
     "morgan": "^1.6.1",
     "nodemailer": "^1.8.0",
+    "octonode": "^0.7.4",
+    "pretty-date": "^0.2.0",
+    "prompt": "^0.2.14",
+    "recursive-readdir": "^1.2.1",
     "require-dir": "^0.3.0",
     "serve-favicon": "^2.3.0",
     "webdriverio": "^3.2.5",
-    "xml2js": "^0.4.13",
-    "recursive-readdir": "^1.2.1",
-    "chai-fs": "^0.1.0"
+    "writeson": "^1.0.1",
+    "xml2js": "^0.4.13"
   },
   "description": "It's 2015, you should update your resume and generate a web version using a CLI, using Templates on MarkDown.",
   "main": "index.js",
