--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "body-parser": "^1.14.1",
     "bower": "^1.6.3",
     "browserify": "^11.2.0",
-    "chai": "1.6.1",
+    "chai": "^1.6.1",
     "chai-fs": "^0.1.0",
+    "chromedriver": "^2.20.0",
     "cookie-parser": "^1.4.0",
-    "cpr": "^0.4.3",
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "gulp-zip": "^3.0.2",
@@ -64,7 +64,9 @@
     "prompt": "^0.2.14",
     "recursive-readdir": "^1.2.1",
     "require-dir": "^0.3.0",
+    "selenium-standalone": "^4.7.1",
     "serve-favicon": "^2.3.0",
+    "shelljs": "^0.5.3",
     "webdriverio": "^3.2.5",
     "writeson": "^1.0.1",
     "xml2js": "^0.4.13"
