--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "1.11.3",
     "jshint-stylish": "^1.0.1",
     "mocha": "^2.2.4",
+    "nodemon": "^1.8.1",
     "normalize.css": "3.0.3",
     "run-sequence": "^1.0.2"
   },
@@ -54,6 +55,7 @@
     "chromedriver": "^2.20.0",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
+    "diskdb": "^0.1.14",
     "express": "^4.13.3",
     "gulp-zip": "^3.0.2",
     "jade": "^1.11.0",
